# sockudo

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DELTA_COMPRESSION.md  Dockerfile  FEATURE_COMPARISON.md  Makefile  Package.resolved  Package.swift  README.md  composer.json  deny.toml  docker-compose.ai-transport.yml  docker-compose.benchmark.yml  docker-compose.dashboard.yml  docker-compose.dev.yml  docker-compose.iggy.yml  docker-compose.prod.yml  docker-compose.redis-cluster.yml  docker-compose.test.yml  docker-compose.yml  package.json  skills-lock.json  soak-test-results-2026-01-26T12-50-59-645Z.json
.cargo/: config.toml
client-sdks/sockudo-python/: .gitignore  README.md  pyproject.toml
client-sdks/sockudo-python/.github/workflows/: ci.yml  publish.yml
client-sdks/sockudo-python/src/sockudo_python/: __init__.py  client.py
client-sdks/sockudo-python/tests/: test_client.py  test_filter.py  test_protocol.py
crates/sockudo-adapter/: Cargo.toml
crates/sockudo-adapter/benches/: hot_path_replacements.rs
crates/sockudo-adapter/src/: channel_manager.rs  cleanup.rs  connection_manager.rs  factory.rs  filter_index.rs  google_pubsub_adapter.rs  horizontal_adapter.rs  horizontal_adapter_base.rs  horizontal_transport.rs  iggy_adapter.rs  kafka_adapter.rs  lib.rs  local_adapter.rs  memory_rate_limiter.rs  nats_adapter.rs  presence.rs  pulsar_adapter.rs  rabbitmq_adapter.rs  redis_adapter.rs  redis_cluster_adapter.rs  replay_buffer.rs  v2_broadcast.rs  watchlist.rs
crates/sockudo-adapter/src/handler/: ai_orphans.rs  annotations.rs  authentication.rs  connection_management.rs  core.rs  history_frames.rs  message_handlers.rs  mod.rs  origin_validation.rs  rate_limiting.rs  recovery.rs  signin_management.rs  subscription_management.rs  timeout_management.rs  types.rs  validation.rs  webhook_management.rs
crates/sockudo-adapter/src/horizontal_adapter/: mod.rs  operations.rs
crates/sockudo-adapter/tests/: cleanup_fallback_tests.rs  cleanup_sender_tests.rs  integration.rs  redis_sentinel_live.rs
crates/sockudo-ai-transport/: Cargo.toml
crates/sockudo-ai-transport/src/: lib.rs  observability.rs
crates/sockudo-app/: Cargo.toml
crates/sockudo-app/src/: cached_app_manager.rs  dynamodb_app_manager.rs  factory.rs  lib.rs  memory_app_manager.rs  mysql_app_manager.rs  pg_app_manager.rs  scylla_app_manager.rs  surrealdb_app_manager.rs
crates/sockudo-app/tests/: origin_validation_config_integration.rs
crates/sockudo-cache/: Cargo.toml
crates/sockudo-cache/src/: factory.rs  fallback_cache_manager.rs  lib.rs  memory_cache_manager.rs  redis_cache_manager.rs  redis_cluster_cache_manager.rs
crates/sockudo-core/: Cargo.toml
crates/sockudo-core/benches/: history_bench.rs  namespace_bench.rs  versioned_message_streaming.rs
crates/sockudo-core/examples/: profile_namespace_exact.rs  profile_namespace_ref_allocs.rs
crates/sockudo-core/src/: annotation_summarizers.rs  annotations.rs  app.rs  auth.rs  cache.rs  delta_types.rs  error.rs  history.rs  history_conformance.rs  lib.rs  metrics.rs  namespace.rs  options.rs  origin_validation.rs  presence_history.rs  queue.rs  rate_limiter.rs  token.rs  utils.rs  version_store.rs  versioned_message_auth.rs  versioned_messages.rs  webhook_types.rs  websocket.rs
crates/sockudo-core/tests/: cors_specific_case.rs  origin_validation_integration.rs  unix_socket_config.rs  v2_feature_config.rs
crates/sockudo-delta/: Cargo.toml
crates/sockudo-delta/benches/: delta_compression_bench.rs
crates/sockudo-delta/src/: lib.rs
crates/sockudo-filter/: Cargo.toml
crates/sockudo-filter/benches/: filter_bench.rs
crates/sockudo-filter/src/: lib.rs  node.rs  ops.rs
crates/sockudo-metrics/: Cargo.toml
crates/sockudo-metrics/src/: lib.rs  prometheus.rs
crates/sockudo-protocol/: Cargo.toml
crates/sockudo-protocol/src/: constants.rs  lib.rs  messages.rs  protocol_version.rs  wire.rs
crates/sockudo-protocol/tests/: protocol_compliance.rs
crates/sockudo-push/: Cargo.toml
crates/sockudo-push/benches/: push_pipeline_bench.rs
crates/sockudo-push/examples/: webpush_send.rs
crates/sockudo-push/src/: activation.rs  api.rs  cleanup.rs  conformance.rs  credentials.rs  dispatch.rs  domain.rs  feedback.rs  lib.rs  memory.rs  meta.rs  metrics.rs  nosql.rs  pipeline.rs  planner.rs  ratelimit.rs  registry.rs  rules.rs  scheduler.rs  sql.rs  status.rs  storage.rs  subscription.rs  templates.rs  testing.rs  transform.rs  transformer.rs
crates/sockudo-push/tests/: push_memory_pipeline.rs
crates/sockudo-queue/: Cargo.toml
crates/sockudo-queue/src/: google_pubsub_queue_manager.rs  iggy_queue_manager.rs  kafka_queue_manager.rs  lib.rs  manager.rs  memory_queue_manager.rs  nats_queue_manager.rs  pulsar_queue_manager.rs  rabbitmq_queue_manager.rs  redis_cluster_queue_manager.rs  redis_queue_manager.rs  sns_queue_manager.rs  sqs_queue_manager.rs
crates/sockudo-queue/tests/: iggy_queue_live_test.rs
crates/sockudo-rate-limiter/: Cargo.toml
crates/sockudo-rate-limiter/src/: factory.rs  lib.rs  memory_limiter.rs  middleware.rs  redis_cluster_limiter.rs  redis_limiter.rs  redis_window.rs
crates/sockudo-rate-limiter/tests/: redis_limiter_live.rs
crates/sockudo-server/: Cargo.toml
crates/sockudo-server/src/: history.rs  history_dynamodb.rs  history_mysql.rs  history_scylla.rs  history_surreal.rs  http_handler.rs  main.rs  middleware.rs  presence_history.rs  push_http.rs  ws_handler.rs
crates/sockudo-server/tests/: clustered_durable_history_redis_test.rs
crates/sockudo-webhook/: Cargo.toml
crates/sockudo-webhook/src/: integration.rs  lambda_sender.rs  lib.rs  sender.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: push_payload_mapping.rs
server-sdks/sockudo-http-python/: .gitignore  README.md  pyproject.toml
server-sdks/sockudo-http-python/tests/: test_client.py
server-sdks/sockudo-http-rust/: Cargo.toml  LICENSE  README.md
server-sdks/sockudo-http-rust/src/: auth.rs  channel.rs  config.rs  errors.rs  events.rs  history.rs  lib.rs  presence_history.rs  push.rs  sockudo.rs  token.rs  util.rs  webhook.rs
(+1888 files in other folders)
