[package]
name = "sockudo"
version = "2.8.1"
edition = "2024"
repository = "https://github.com/RustNSparks/sockudo"
license-file = "LICENSE"
description = "A simple, fast, and secure WebSocket server for real-time applications."

[features]
default = ["local"]

# Meta features for common configurations
local = []  # Local/memory-only (no external dependencies)
full = ["redis", "redis-cluster", "nats", "mysql", "postgres", "dynamodb", "scylladb", "sqs", "lambda"]

# Adapter features
redis = ["dep:redis"]
redis-cluster = ["redis"]
nats = ["dep:async-nats"]

# App manager features
mysql = ["dep:sqlx"]
postgres = ["dep:sqlx"]
dynamodb = ["dep:aws-config", "dep:aws-sdk-dynamodb"]
scylladb = ["dep:scylla"]

# Queue features
sqs = ["dep:aws-config", "dep:aws-sdk-sqs"]

# Webhook features
lambda = ["dep:aws-config", "dep:aws-sdk-lambda"]

[dependencies]
axum = { version = "^0.8.4", features = ["ws"] }
tokio = { version = "^1", features = ["full", "tracing"] }
tower-http = { version = "^0.6.4", features = ["cors"] }
fastwebsockets = { version = "0.10.0", features = [
    "upgrade",
    "with_axum",
    "unstable-split",
    "hyper-util",
    "hyper",
] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
thiserror = "^2.0.9"
dashmap = "^6.1.0"
futures = "0.3.18"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
regex = "1.11.1"
hmac = "0.13.0-pre.4"
sha2 = "0.11.0-pre.4"
hex = "0.4.3"
rand = "0.9.0"
hyper-util = "^0.1.10"
hyper = "^1.5.0"
chrono = "^0.4.41"
sysinfo = "0.37.0"
async-trait = "0.1.83"
redis = { version = "^0.32.4", features = ["tokio-comp", "json", "cluster", "cluster-async", "tls-rustls", "tokio-rustls-comp", "tls-rustls-webpki-roots", "connection-manager"], optional = true }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "mysql", "postgres", "tls-rustls"], optional = true }
scylla = { version = "1.3.1", features = ["rustls-023"], optional = true }
aws-config = { version = "^1.6", features = ["behavior-version-latest"], optional = true }
aws-sdk-dynamodb = { version = "1.71.1", optional = true }
urlencoding = "2.1.3"
futures-util = "0.3.31"
tower-layer = "0.3.3"
tower-service = "0.3.3"
prometheus = "0.14.0"
moka = { version = "0.12.10", features = ["future"] }
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls", "rustls-tls-webpki-roots"] }
aws-sdk-sqs = { version = "1.65.0", optional = true }
async-nats = { version = "0.43.0", optional = true }
aws-sdk-lambda = { version = "1.76.0", optional = true }
num_cpus = "1.16.0"
bytes = "1.10"
url = { version = "2.3.1", features = ["serde"] }
axum-server = { version = "^0.7.2", features = ["tls-rustls"] }
axum-extra = { version = "^0.10.1", features = ["typed-header"] }
http = "1.3.1"
ahash = "0.8.12"
clap = { version = "4.5.38", features = ["derive"] }
md5 = "0.8.0"
serde_urlencoded = "0.7"
http-body-util = "0.1.3"
mockall = "0.13.1"
rustls = { version = "0.23.29", features = ["ring"] }
tower = "0.5.2"
mimalloc = { version = "0.1.48", features = ["v3"] }


[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[profile.release]
codegen-units = 1
lto = true

[package.metadata.binstall]
pkg-url = "https://github.com/RustNSparks/sockudo/releases/download/v{version}/sockudo-v{version}-{target}{archive-suffix}"
pkg-fmt = "tgz"
supported-targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-unknown-linux-musl",
    "aarch64-unknown-linux-gnu",
    "aarch64-unknown-linux-musl",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc"
]

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
