[package]
name = "sockudo"
version = "3.0.0"
edition = "2024"
repository = "https://github.com/RustNSparks/sockudo"
license-file = "LICENSE"
description = "A simple, fast, and secure WebSocket server for real-time applications."

[features]
default = ["local"]

# Meta features for common configurations
local = [] # Local/memory-only (no external dependencies)
full = [
    "redis",
    "redis-cluster",
    "nats",
    "mysql",
    "postgres",
    "dynamodb",
    "scylladb",
    "sqs",
    "lambda",
]

# Adapter features
redis = ["dep:redis"]
redis-cluster = ["redis"]
nats = ["dep:async-nats"]

# App manager features
mysql = ["dep:sqlx"]
postgres = ["dep:sqlx"]
dynamodb = ["dep:aws-config", "dep:aws-sdk-dynamodb"]
scylladb = ["dep:scylla"]

# Queue features
sqs = ["dep:aws-config", "dep:aws-sdk-sqs"]

# Webhook features
lambda = ["dep:aws-config", "dep:aws-sdk-lambda"]

[dependencies]
cmake = "0.1.56"
axum = { version = "^0.8", features = ["ws"] }
tokio = { version = "^1", features = ["full", "tracing"] }
tower-http = { version = "^0.6.6", features = ["cors"] }
sockudo-ws = { version = "1.7.4", features = ["axum-integration"] }
serde = { version = "^1", features = ["derive"] }
serde_json = { version = "^1", features = ["preserve_order"] }
thiserror = "^2.0.17"
dashmap = "^6.1.0"
futures = "0.3.31"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "env-filter",
    "json",
] }
regex = "1.12.2"
hmac = "0.13.0-rc.3"
sha2 = "0.11.0-rc.3"
hex = "0.4.3"
rand = "0.9.2"
hyper-util = "^0.1.17"
hyper = "^1.7.0"
chrono = "^0.4.42"
sysinfo = "0.37.2"
async-trait = "0.1.89"
redis = { version = "^1.0.0-rc.3", features = [
    "tokio-comp",
    "json",
    "cluster",
    "cluster-async",
    "tls-rustls",
    "tokio-rustls-comp",
    "tls-rustls-webpki-roots",
    "connection-manager",
], optional = true }
sqlx = { version = "^0.8.6", features = [
    "runtime-tokio-rustls",
    "mysql",
    "postgres",
    "tls-rustls",
], optional = true }
scylla = { version = "1.3.1", features = ["rustls-023"], optional = true }
aws-config = { version = "^1.8.10", features = [
    "behavior-version-latest",
], optional = true }
aws-sdk-dynamodb = { version = "1.98.0", optional = true }
urlencoding = "2.1.3"
futures-util = "0.3.31"
tower-layer = "0.3.3"
tower-service = "0.3.3"
prometheus = "0.14.0"
moka = { version = "0.12.11", features = ["future", "sync"] }
reqwest = { version = "^0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "rustls-tls-webpki-roots",
] }
aws-sdk-sqs = { version = "1.89.0", optional = true }
async-nats = { version = "^0.45", optional = true }
aws-sdk-lambda = { version = "1.104.0", optional = true }
num_cpus = "1.17.0"
bytes = "1.10"
url = { version = "2.5.7", features = ["serde"] }
axum-server = { version = "^0.7", features = ["tls-rustls"] }
axum-extra = { version = "^0.12", features = ["typed-header"] }
http = "1.3.1"
ahash = { version = "0.8.12", features = ["serde"] }
clap = { version = "4.5.51", features = ["derive"] }
md5 = "0.8.0"
serde_urlencoded = "0.7"
http-body-util = "0.1.3"
mockall = "0.13.1"
rustls = { version = "0.23.35", default-features = false, features = [
    "ring",
    "std",
    "tls12",
] }
tower = "0.5.2"
mimalloc = { version = "0.1.48", features = ["v3"] }
fossil-delta = "0.2.0"
base64 = "0.22"
oxidelta = "0.1.4"
serde_json_path = "0.7.2"
rayon = "1.10" # Parallel iterators for filter evaluation
tokio-util = "0.7" # CancellationToken for graceful shutdown
memchr = "2.7" # SIMD-accelerated string searching
libc = "0.2" # For process metrics on macOS/Linux


[dependencies.uuid]
version = "1.18.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }

[profile.release]
codegen-units = 1
lto = true

[[bench]]
name = "delta_compression_bench"
path = "benchmarks/delta_compression_bench.rs"
harness = false

[[bench]]
name = "filter_bench"
path = "benchmarks/filter_bench.rs"
harness = false

[package.metadata.binstall]
pkg-url = "https://github.com/RustNSparks/sockudo/releases/download/v{version}/sockudo-v{version}-{target}{archive-suffix}"
pkg-fmt = "tgz"
supported-targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-unknown-linux-musl",
    "aarch64-unknown-linux-gnu",
    "aarch64-unknown-linux-musl",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc",
]

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
