[workspace]
members = [
  "crates/sockudo-protocol",
  "crates/sockudo-filter",
  "crates/sockudo-core",
  "crates/sockudo-app",
  "crates/sockudo-cache",
  "crates/sockudo-queue",
  "crates/sockudo-rate-limiter",
  "crates/sockudo-metrics",
  "crates/sockudo-webhook",
  "crates/sockudo-delta",
  "crates/sockudo-adapter",
  "crates/sockudo-server",
]
exclude = [
  "server-sdks/pusher-http-rust",
]
resolver = "3"

[workspace.package]
version = "3.4.2"
edition = "2024"
rust-version = "1.90"
repository = "https://github.com/sockudo/sockudo"
license-file = "LICENSE"

[workspace.dependencies]
# Internal crates
sockudo-protocol = { version = "3.4.2", path = "crates/sockudo-protocol" }
sockudo-filter = { version = "3.4.2", path = "crates/sockudo-filter" }
sockudo-core = { version = "3.4.2", path = "crates/sockudo-core" }
sockudo-app = { version = "3.4.2", path = "crates/sockudo-app" }
sockudo-cache = { version = "3.4.2", path = "crates/sockudo-cache" }
sockudo-queue = { version = "3.4.2", path = "crates/sockudo-queue" }
sockudo-rate-limiter = { version = "3.4.2", path = "crates/sockudo-rate-limiter" }
sockudo-metrics = { version = "3.4.2", path = "crates/sockudo-metrics" }
sockudo-webhook = { version = "3.4.2", path = "crates/sockudo-webhook" }
sockudo-delta = { version = "3.4.2", path = "crates/sockudo-delta" }
sockudo-adapter = { version = "3.4.2", path = "crates/sockudo-adapter", default-features = false }

# External dependencies (shared versions)
async-trait = "0.1.89"
ahash = { version = "0.8.12", features = ["serde"] }
axum = { version = "^0.8", features = ["ws"] }
axum-extra = { version = "^0.12", features = ["typed-header"] }
axum-server = { version = "^0.8", features = ["tls-rustls"] }
aws-config = { version = "^1.8.10", default-features = false, features = [
  "behavior-version-latest",
  "credentials-process",
  "default-https-client",
  "rt-tokio",
  "sso",
] }
aws-sdk-dynamodb = { version = "1.98.0", default-features = false, features = [
  "behavior-version-latest",
  "default-https-client",
  "rt-tokio",
] }
aws-sdk-lambda = { version = "1.104.0", default-features = false, features = [
  "behavior-version-latest",
  "default-https-client",
  "rt-tokio",
] }
aws-sdk-sns = { version = "1.89.0", default-features = false, features = [
  "behavior-version-latest",
  "default-https-client",
  "rt-tokio",
] }
aws-sdk-sqs = { version = "1.89.0", default-features = false, features = [
  "behavior-version-latest",
  "default-https-client",
  "rt-tokio",
] }
async-nats = "^0.45"
google-cloud-auth = "1.8.0"
google-cloud-pubsub = "0.33.1"
base64 = "0.22"
bytes = "1.10"
chrono = "^0.4.42"
clap = { version = "4.5.51", features = ["derive"] }
cmake = "0.1.56"
crossfire = { version = "3.1.5", features = ["tokio"] }
dashmap = "^6.1.0"
fossil-delta = "0.2.0"
futures = "0.3.31"
futures-util = "0.3.31"
hex = "0.4.3"
hmac = "0.13.0-rc.3"
http = "1.3.1"
http-body-util = "0.1.3"
hyper = "^1.7.0"
hyper-util = "^0.1.17"
libc = "0.2"
md5 = "0.8.0"
memchr = "2.7"
mimalloc = { version = "0.1.48", features = ["v3"] }
mockall = "0.13.1"
moka = { version = "0.12.11", features = ["future", "sync"] }
lapin = { version = "4.3.0", default-features = false, features = ["rustls", "tokio"] }
num_cpus = "1.17.0"
oxidelta = "0.1.4"
prometheus = "0.14.0"
rand = "0.9.2"
rayon = "1.10"
redis = { version = "^1", features = [
  "tokio-comp",
  "json",
  "cluster",
  "cluster-async",
  "tls-rustls",
  "tokio-rustls-comp",
  "tls-rustls-webpki-roots",
  "connection-manager",
] }
regex = "1.12.2"
rdkafka = { version = "0.39.0", default-features = false, features = ["tokio", "cmake-build", "libz"] }
reqwest = { version = "^0.12", default-features = false, features = [
  "json",
  "rustls-tls",
  "rustls-tls-webpki-roots",
] }
rustls = { version = "0.23.35", default-features = false, features = ["ring", "std", "tls12"] }
scylla = { version = "1.3.1", features = ["rustls-023"] }
serde = { version = "^1", features = ["derive"] }
serde-aux = "4"
serde_json_path = "0.7.2"
serde_urlencoded = "0.7"
sha2 = "0.11.0-rc.3"
sockudo-ws = { version = "1.7.4", features = ["axum-integration"] }
sonic-rs = "0.5.6"
surrealdb = { version = "3.0.4", default-features = false, features = ["protocol-ws", "protocol-http", "rustls"] }
surrealdb-types = "3.0.5"
toml = "0.8"
sqlx = { version = "^0.8.6", features = [
  "runtime-tokio-rustls",
  "mysql",
  "postgres",
  "tls-rustls",
] }
sysinfo = "0.37.2"
thiserror = "^2.0.17"
tokio = { version = "^1", features = ["full", "tracing"] }
tokio-util = "0.7"
tower = "0.5.2"
tower-http = { version = "^0.6.6", features = ["cors"] }
tower-layer = "0.3.3"
tower-service = "0.3.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
url = { version = "2.5.7", features = ["serde"] }
urlencoding = "2.1.3"
uuid = { version = "1.18.1", features = ["v4", "fast-rng", "macro-diagnostics"] }

# Dev dependencies
criterion = { version = "0.7.0", features = ["html_reports"] }

[profile.release]
codegen-units = 1
lto = true
