[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sockudo-python"
version = "1.0.0"
description = "Sockudo Python client SDK"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Sockudo" }]
dependencies = [
  "httpx>=0.27.0",
  "msgpack>=1.0.7",
  "PyNaCl>=1.5.0",
  "websockets>=12.0",
  "vcdiff-decoder>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
