[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sockudo-python"
version = "1.0.0"
description = "Sockudo Python client SDK"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Sockudo" }]
dependencies = [
  "httpx>=0.27.0",
  "msgpack>=1.2.1",
  "PyNaCl>=1.5.0",
  "websockets>=12.0",
  "vcdiff-decoder>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/sockudo/sockudo/tree/master/client-sdks/sockudo-python"
Repository = "https://github.com/sockudo/sockudo"
Issues = "https://github.com/sockudo/sockudo/issues"

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.9.0",
  "twine>=6.0.0",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
