[package]
name = "sockudo-metrics"
description = "Metrics collection for Sockudo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
sockudo-core = { workspace = true }

async-trait = { workspace = true }
chrono = { workspace = true }
prometheus = { workspace = true }
sonic-rs = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
libc = { workspace = true }
