[package]
name = "sockudo-protocol"
description = "Pusher protocol message types and constants for Sockudo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
ahash = { workspace = true }
prost = "0.14.1"
rmp-serde = "1.3.0"
serde = { workspace = true }
sonic-rs = { workspace = true }
uuid = { workspace = true }
